[gd_scene load_steps=2 format=3 uid="uid://mapscrn001"]

[ext_resource type="Script" path="res://UI/map_screen.gd" id="1_script"]
[ext_resource type="AudioStream" uid="uid://cd8t5iqmrowpb" path="res://assets/music/tile_map.mp3" id="2_music"]

[node name="MapScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 0
horizontal_scroll_mode = 3

[node name="MapContainer" type="Control" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MapMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_music")
autoplay = true
bus = &"Music"
